making textQuery Route and set credentials

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Chatbot_for_Foreign",
+  "name": "Chatbot-for-Foreign",
   "version": "1.0.0",
   "description": "Chatbot for KOrean Foreign",
   "main": "index.js",
