--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Chatbot for Korean Foreign",
   "main": "index.js",
   "engines": {
-    "node": "10.15.0",
+    "node": "16.12.0",
     "npm": "6.9.0"
   },
   "scripts": {
@@ -21,10 +21,12 @@
     "dialogflow": "^0.8.2",
     "dialogflow-fulfillment": "^0.6.1",
     "express": "^4.16.4",
-    "mongoose": "^5.4.20"
+    "mongodb": "^6.13.1",
+    "mongoose": "^8.10.1"
   },
   "devDependencies": {
     "concurrently": "^4.1.0",
     "nodemon": "^1.18.10"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
